Espero que ande ahora

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src='/javascripts/chat.js'> </script>
-    <script src='/socket.io/lib/socket.io.js'> </script>
+    <script src='/socket.io/socket.io.js'> </script>
   </head>
   <body>
     <h1><%= title %></h1>
