tirado al final...

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,6 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src='/javascripts/chat.js'> </script>
-    <script src='socket.io/lib/socket.io.js'> </script>
   </head>
   <body>
     <h1><%= title %></h1>
@@ -19,6 +17,8 @@
         <div id="content">
         </div>
 
+    <script src='/javascripts/chat.js'> </script>
+    <script src='/socket.io/socket.io.js'> </script>
     </div>
   </body>
 </html>
