--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
         <div id="content">
         </div>
 
-    <script src='/socket.io/socket.io.js'> </script>
+    <script src='/socket.io/lib/socket.io.js'> </script>
     <script src='/javascripts/chat.js'> </script>
     </div>
   </body>
