Si esto no me deja voy a putear demasiado

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,9 @@
         </div>
 
     <script src='/socket.io/lib/socket.io.js'> </script>
+    <script src='/socket.io/socket.io.js'> </script>
+    <script src='node_modules/socket.io/lib/socket.io.js'> </script>
+    <script src='/socket.io.js'> </script>
     <script src='/javascripts/chat.js'> </script>
     </div>
   </body>
