--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <div class="controls">
         <h3>Name:</h3><input type="text" id="name"/>
         <br>
-        <input id="field" />
+        <input id="field" onkeypress="return enterKey(event)"/>
         <input id="send" type="button" value="send">
 
         <div id="content">
