--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,16 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src='/socket.io/socket.io.js'> </script>
     <script src='/javascripts/chat.js'> </script>
+    <script>
+    function enterKey (e) {
+        if (e.keyCode == 13) {
+            send();
+            return false;
+        }
+        return true;
+    };
+    </script>
+
   </head>
   <body>
     <h1><%= title %></h1>
