--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,26 +8,35 @@
     <script>
     function enterKey (e) {
         if (e.keyCode == 13) {
-            send();
+            var text = field.value;
+            var author_v = name.value;
+            if (author_v == "")
+            alert ("Debe poner su nombre -_-");
+            else {
+                if (text != "")
+                    socket.emit('send', { message: text, author: author_v });
+
+                field.value = "";
+            }
             return false;
         }
         return true;
     };
-    </script>
+</script>
 
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+      <h1><%= title %></h1>
+      <p>Welcome to <%= title %></p>
 
-    <div class="controls">
-        <h3>Name:</h3><input type="text" id="name"/>
-        <br>
-        <input id="field" onkeypress="return enterKey(event)"/>
+      <div class="controls">
+          <h3>Name:</h3><input type="text" id="name"/>
+          <br>
+          <input id="field" onkeypress="return enterKey(event)"/>
 
-        <div id="content">
-        </div>
+          <div id="content">
+          </div>
 
-    </div>
+      </div>
   </body>
 </html>
