--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,24 +5,6 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src='/socket.io/socket.io.js'> </script>
     <script src='/javascripts/chat.js'> </script>
-    <script>
-    function enterKey (e) {
-        if (e.keyCode == 13) {
-            var text = field.value;
-            var author_v = name.value;
-            if (author_v == "")
-            alert ("Debe poner su nombre -_-");
-            else {
-                if (text != "")
-                    socket.emit('send', { message: text, author: author_v });
-
-                field.value = "";
-            }
-            return false;
-        }
-        return true;
-    };
-</script>
 
   </head>
   <body>
@@ -32,7 +14,7 @@
       <div class="controls">
           <h3>Name:</h3><input type="text" id="name"/>
           <br>
-          <input id="field" onkeypress="return enterKey(event)"/>
+          <input id="field" />
 
           <div id="content">
           </div>
