--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,17 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href="/stylesheets/highlighter/SyntaxHighlighter.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
     <script src='/socket.io/socket.io.js'> </script>
     <script src='/javascripts/chat.js'> </script>
     <script language="javascript" src="/javascripts/highlighter/shCore.js"></script>
     <script language="javascript" src="/javascripts/highlighter/shBrushCpp.js"></script>
     <script language="javascript" src="/javascripts/highlighter/shBrushJava.js"></script>
     <style>
+        html, body {
+            font-family: "Droid Sans", sans-serif;
+        }
         .controls {
             width: 100%;
         }
@@ -42,6 +47,10 @@
             margin-left: 0px;
             margin-right: 0px;
             width: 88%;
+        }
+
+        #code-view * {
+            font-family: "Droid Sans Mono", monospace;
         }
 
     </style>
