Soporte de sesiones, login. etc

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
           <div id="content">
           </div>
           <div id="chat-control">
-              <input id="name"/>
+              <input id="name" value="<%= user %>"/>
               <input id="field"/>
           </div>
 
