--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,13 +13,39 @@
     <script language="javascript" src="/javascripts/highlighter/shBrushJava.js"></script>
     <style>
         html, body {
+            margin: 0;
+            padding:0;
             font-family: "Droid Sans", sans-serif;
         }
+        
+        body {
+            background-color: #2f093b;
+        }
+        
+        header {
+            background-color: #210830;
+            color: #bbb;
+            padding: 15px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            border-bottom: 2px solid #999;
+        }
+        
+        header h1 {
+            margin: 0;
+            padding: 0;
+        }
+        
         .controls {
-            width: 100%;
+            width: 82%;
+            padding: 9%;
+    
+            padding-top: 1%;
+            padding-bottom:2%;
         }
 
         #content {
+            background-color: #eee;
             width: 100%;
             height: 200px;
             border: 1px solid #aaa;
@@ -57,7 +83,9 @@
 
   </head>
   <body>
-
+    <header>
+        <h1>Fanthomless Lake Development</h1>
+    </header>
       <div class="controls">
 
           <div id="content">
