--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,12 +19,15 @@
         }
         
         body {
-            background-color: #2f093b;
+            background-color: #1B1B24;
         }
         
         header {
-            background-color: #210830;
+            background-color: #464368;
             color: #bbb;
+            margin: 12px;
+            margin-left: 30px;
+            margin-right: 30px;
             padding: 15px;
             padding-top: 20px;
             padding-bottom: 20px;
