--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,7 +87,7 @@
   </head>
   <body>
     <header>
-        <h1>Fanthomless Lake Development</h1>
+        <h1>Fathomless Lake Development</h1>
     </header>
       <div class="controls">
 
