Mejor con un botoncito! :D

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
         }
         
         #new_problem {
-            width: 99%;
+            width: 90%;
         }
         
         #content {
@@ -113,7 +113,9 @@
           
             <div id="codeforces">
             </div>
-            <span><u><i>URL</i></u></span><input id="new_problem">
+            <span><u><i>URL</i></u></span>
+            <input id="new_problem">
+            <input type="button" id="submit_problem" value="Buscar">
           </div>
         
         
