Agregado el estilo de codeforces

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href="/stylesheets/highlighter/SyntaxHighlighter.css"/>
+    <link rel='stylesheet' href='/stylesheets/codeforces.css' />
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
     <script src='/socket.io/socket.io.js'> </script>
