--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,85 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
 a {
   color: #00B7FF;
 }
+
+html, body {
+    margin: 0;
+    padding:0;
+    font-family: "Droid Sans", sans-serif !important;
+}
+
+body {
+    background-color: #1B1B24;
+}
+
+header {
+    background-color: #464368;
+    color: #bbb;
+    margin: 12px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 2px solid #999;
+}
+
+header h1 {
+    margin: 0;
+    padding: 0;
+}
+
+.controls {
+
+    width: 82%;
+    padding: 9%;
+
+    padding-top: 1%;
+    padding-bottom:2%;
+}
+#enunciado {
+    margin-top: 15px;
+    background-color: #eee;
+    padding: 10px;
+}
+
+#new_problem {
+    width: 90%;
+}
+
+#content {
+    background-color: #eee;
+    width: 100%;
+    height: 200px;
+    border: 1px solid #aaa;
+    border-radius: 3px;
+    margin: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+}
+#chat-control {
+    background-color: #eee;
+}
+#chat-control > * {
+    display: inline-block;
+}
+#name {
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 10%;
+}
+#field {
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 88%;
+}
+
+#code-view * {
+    font-family: "Droid Sans Mono", monospace;
+}
+
