Fuente de color blanco para el login

--- a/views/username.ejs
+++ b/views/username.ejs
@@ -9,6 +9,12 @@
     <script src='/socket.io/socket.io.js'> </script>
     <script src='/javascripts/chat.js'> </script>
 
+    <style>
+        body {
+            padding: 50px;
+            color: #eee;
+        }
+    </style>
 
   </head>
   <body>
