--- a/public/stylesheets/codeforces.css
+++ b/public/stylesheets/codeforces.css
@@ -9,7 +9,7 @@ q:before,q:after{content:'';}
 abbr,acronym{border:0;}
 textarea{margin:0;padding:2px;}
 a:link{color:#00c;}
-body{background:#fff;margin:3px 8px;}
+body{margin:3px 8px;}
 body,select,input{font-family:verdana,arial,sans-serif;}
 body{font-size:87.5%;}
 h1{font-size:1.8em;font-weight:bold;}
