--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,8 +45,10 @@
 
                 <div id="code-view">
                     <pre name="code" class="cpp">
-/* http://codeforces.com/problemset/problem/318/A 
- * @author: Matias Linares
+/* Estupida cosa que no anda.
+ * Codeforces output:
+ *   wrong answer 1st numbers differ
+ *   expected: '999999999997', found: '3567587325'
  */
 
 #include &lt;assert.h&gt;
@@ -59,41 +61,43 @@
 int
 main (void)
 {
-        unsigned int n = 0;
-        unsigned int k = 0;
-        int scanf_result = 0;
+    long unsigned int n = 0;
+    long unsigned int k = 0;
+    int scanf_result = 0;
 
-        scanf_result = scanf("%u %u",&n, &k);
-        if (scanf_result != 2)
-        {
-                fprintf (stderr ,"Scan Faliure\nError Code %i\n", scanf_result);
-                return (SCAN_FALIURE);
-        }
+    scanf_result = scanf("%lu %lu",&n, &k);
+    if (scanf_result != 2)
+    {
+        fprintf (stderr ,"Scan Faliure\nError Code %i\n", scanf_result);
+        return (SCAN_FALIURE);
+    }
 
 
-        if (n &lt; k)
-        {
-                fprintf(stderr, "PROBLEMA :P\n"
-                                                "Hay que tener el primer elemento"
-                                                " mas grande que el segundo\n");
-                return (INPUT_FALIURE);
-        }
+    if (n &lt; k)
+    {
+        fprintf(stderr, "PROBLEMA :P\n"
+                "Hay que tener el primer elemento"
+                " mas grande que el segundo\n");
+        return (INPUT_FALIURE);
+    }
 
-        /* Una vez que pasan los casos estos, podemos empezar a 
-         * hacer el resto */
+    /* Una vez que pasan los casos estos, podemos empezar a 
+     * hacer el resto */
+    
+    long unsigned int half = n/2;
+    if ((n % 2) == 1)
+    {
+        half++;
+    }
+    if (k &lt;= half)
+        fprintf(stdout, "%lu\n", (2*k)-1);
+    else 
+    {
+        k = k - half;
+        fprintf(stdout, "%lu\n", (2*k));
+    }
 
-        unsigned int half = n/2;
-        if ((n % 2) == 1)
-                half--;
-        if (k &lt;= half)
-                fprintf(stdout, "%u\n", (2*k)-1);
-        else 
-        {
-                k = k - half;
-                fprintf(stdout, "%u\n", (2*k));
-        }
-
-        return EXIT_SUCCESS;
+    return EXIT_SUCCESS;
 }
                 </pre>
 
