Ahora se pueden cambiar el codigo de la pagina principal

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,8 +43,8 @@
 
 
 
-                <div id="code-view">
-                    <pre name="code" class="cpp">
+                <div id="code-view" style="background-color: #eee; border-radius: 8px;">
+                    <pre id="code_pre" name="code" class="cpp">
 /* Estupida cosa que no anda.
  * Codeforces output:
  *   wrong answer 1st numbers differ
@@ -98,11 +98,12 @@ main (void)
     }
 
     return EXIT_SUCCESS;
-}
+}               
                 </pre>
-
+                
+                <a href="#" style="margin: 7px;">Change the code!</a>
             </div>
-
+            
         </div>
         <script language="javascript">
             dp.SyntaxHighlighter.ClipboardSwf = '/javascripts/highlighter/clipboard.swf';
