--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,63 +45,9 @@
 
                 <div id="code-view" style="background-color: #eee; border-radius: 8px;">
                     <pre id="code_pre" name="code" class="cpp">
-/* Estupida cosa que no anda.
- * Codeforces output:
- *   wrong answer 1st numbers differ
- *   expected: '999999999997', found: '3567587325'
- */
-
-#include &lt;assert.h&gt;
-#include &lt;stdio.h&gt;
-#include &lt;stdlib.h&gt;
-
-#define SCAN_FALIURE 1
-#define INPUT_FALIURE 2
-
-int
-main (void)
-{
-    long unsigned int n = 0;
-    long unsigned int k = 0;
-    int scanf_result = 0;
-
-    scanf_result = scanf("%lu %lu",&n, &k);
-    if (scanf_result != 2)
-    {
-        fprintf (stderr ,"Scan Faliure\nError Code %i\n", scanf_result);
-        return (SCAN_FALIURE);
-    }
-
-
-    if (n &lt; k)
-    {
-        fprintf(stderr, "PROBLEMA :P\n"
-                "Hay que tener el primer elemento"
-                " mas grande que el segundo\n");
-        return (INPUT_FALIURE);
-    }
-
-    /* Una vez que pasan los casos estos, podemos empezar a 
-     * hacer el resto */
-    
-    long unsigned int half = n/2;
-    if ((n % 2) == 1)
-    {
-        half++;
-    }
-    if (k &lt;= half)
-        fprintf(stdout, "%lu\n", (2*k)-1);
-    else 
-    {
-        k = k - half;
-        fprintf(stdout, "%lu\n", (2*k));
-    }
-
-    return EXIT_SUCCESS;
-}               
-                </pre>
+                    </pre>
                 
-                <a href="#" style="margin: 7px;">Change the code!</a>
+                <a href="/new_code" target="blank" style="margin: 7px;">Change the code!</a>
             </div>
             
         </div>
