--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title><%= title %></title>
+        <title>Fathomless Lake Development Platform</title>
         <link rel='stylesheet' href="/stylesheets/highlighter/SyntaxHighlighter.css"/>
         <link rel='stylesheet' href='/stylesheets/codeforces.css' />
         <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header>
-                <h1>Fathomless Lake Development</h1>
+                <h1>Fathomless Lake Development Platform</h1>
         </header>
             <div class="controls">
 
@@ -30,7 +30,7 @@
                 </div>
 
                 <div id="enunciado">
-                    <h2><u><i>Problema</i></u></h2>
+                    <h2><u><i>Problem</i></u></h2>
 
                     <div id="codeforces">
                     </div>
@@ -44,6 +44,7 @@
 
 
                 <div id="code-view" style="background-color: #eee; border-radius: 8px;">
+                    <h2><u><i>Code</i></u></h2>
                     <pre id="code_pre" name="code" class="cpp">
                     </pre>
                 
