testing light table

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 
                     <div id="codeforces">
                     </div>
-                    <span><u><i>URL</i></u></span>
+                    <span><u><i>URLe</i></u></span>
                     <input id="new_problem">
                     <input type="button" id="submit_problem" value="Buscar">
                 </div>
@@ -47,10 +47,10 @@
                     <h2><u><i>Code</i></u></h2>
                     <pre id="code_pre" name="code" class="cpp">
                     </pre>
-                
+
                 <a href="/new_code" target="blank" style="margin: 7px;">Change the code!</a>
             </div>
-            
+
         </div>
         <script language="javascript">
             dp.SyntaxHighlighter.ClipboardSwf = '/javascripts/highlighter/clipboard.swf';
