Primeros intentos con oauth de github, ahora solo falta hacer la diferenciacion entre los guests y guithub

--- a/views/username.ejs
+++ b/views/username.ejs
@@ -21,7 +21,8 @@
     <p>Ponga su nombre de usuario:</p>
     <form action="/register" method="post">
         <input name="new_username" />
-        <input type="submit" value="Loguearse">
+        <input name="type" type="submit" value="Login">
     </form>
+    <a href="/register">Github!</a>
   </body>
 </html>
