--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,17 +2,12 @@
 <html>
     <head>
         <title>Fathomless Lake Development Platform</title>
-        <link rel='stylesheet' href="/stylesheets/highlighter/SyntaxHighlighter.css"/>
         <link rel='stylesheet' href='/stylesheets/codeforces.css' />
         <link rel='stylesheet' href='/stylesheets/style.css' />
         <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
         <script src='/socket.io/socket.io.js'> </script>
         <script src='/javascripts/chat.js'> </script>
-        <script language="javascript" src="/javascripts/highlighter/shCore.js"></script>
-        <script language="javascript" src="/javascripts/highlighter/shBrushCpp.js"></script>
-        <script language="javascript" src="/javascripts/highlighter/shBrushJava.js"></script>
-
     </head>
     <body>
         <header>
@@ -40,7 +35,7 @@
                 </div>
 
 
-                <div id="gists" style="background-color: #eee; border-radius:8px;">
+                <div id="gists">
                     <h2><u><i>Code</i></u></h2>
                     <div id="gist-code">
                         <script src="https://gist.github.com/matiaslina/<%=gist_id%>.js"></script>
@@ -50,20 +45,5 @@
                 </div>
 
             </div>
-<!--
-                <div id="code-view" style="background-color: #eee; border-radius: 8px;">
-                    <h2><u><i>Code</i></u></h2>
-                    <pre id="code_pre" name="code" class="cpp">
-                    </pre>
-
-                    <a href="/new_code" target="blank" style="margin: 7px;">Change the code!</a>
-                </div>
-
-            </div>
-            <script language="javascript">
-                dp.SyntaxHighlighter.ClipboardSwf = '/javascripts/highlighter/clipboard.swf';
-                dp.SyntaxHighlighter.HighlightAll ('code');
-            </script>
-            -->
         </body>
     </html>
